--- a/mealdb.html
+++ b/mealdb.html
@@ -14,6 +14,7 @@
   </head>
   <body class="bg-gray">
     <h1 class="text-center text-success">Search Your Favourite Food</h1>
+    <!-- meal search area -->
     <div class="input-group mb-3 w-50 mx-auto">
       <input
         id="search-field"
@@ -32,6 +33,24 @@
         Search
       </button>
     </div>
+
+    <!-- meal search result -->
+    <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <div class="card">
+          <img src="..." class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              This is a longer card with supporting text below as a natural
+              lead-in to additional content. This content is a little bit
+              longer.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
