Created dynamic url based on click and displaying the data for each

--- a/mealdb.html
+++ b/mealdb.html
@@ -34,6 +34,9 @@
       </button>
     </div>
 
+    <!-- single meal details -->
+    <div id="meal-details" class="w-50 mx-auto"></div>
+
     <!-- meal search result -->
     <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4"></div>
 
